apps/on-prem/user-apps/media/qbittorrent/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  serviceName: qbittorrent    
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:5.1.2@sha256:344512822c3325e2238cb46639e77759448ff556e0568fbedf168814690eea4d
        ports:
        - containerPort: 8080
        - containerPort: 6881
        - containerPort: 6881
          protocol: UDP
        volumeMounts:
          - name: config
            mountPath: /config
          - name: downloads
            mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-pvc
        - name: downloads
          hostPath:
            path: /mnt/media/downloads
